--- a/argent-bank-frontend/src/styles/main.scss
+++ b/argent-bank-frontend/src/styles/main.scss
@@ -256,8 +256,7 @@ body {
 }
 
 .edit-button {
-  border-color: #00bc77;
-  background-color: #00bc77;
+  background-color: $color-secondary;
   color: #fff;
   font-weight: bold;
   padding: 10px;
