--- a/argent-bank-frontend/src/styles/main.scss
+++ b/argent-bank-frontend/src/styles/main.scss
@@ -209,7 +209,6 @@ body {
 .footer {
   display: flex;
   justify-content: center;
-  border-top: 2px solid #ccc;
   padding: 2rem 0 1.5rem;
 }
 
@@ -256,7 +255,8 @@ body {
 }
 
 .edit-button {
-  background-color: $color-secondary;
+  border-color: #6558f5;
+  background-color: #6558f5;
   color: #fff;
   font-weight: bold;
   padding: 10px;
@@ -274,8 +274,8 @@ body {
   font-size: 1.1rem;
   font-weight: bold;
   margin-top: 1rem;
-  border-color: #00bc77;
-  background-color: #00bc77;
+  border-color: #6558f5;
+  background-color: #6558f5;
   color: #fff;
 }
 
